inou/prp/tests/errors/immutable_field.prp
/*
:name: immutable_field
:type: error
:error: rebind
*/

// Writing a field of a `const` tuple is a compile error: the whole `r` binding
// is immutable, so `r.a = 33` is a second assignment to `r`.
// Doc: ../docs/docs/pyrope/04-variables.md  `r1.a = 33 // error: 'r1' is
// immutable variable`.
// Emitted: "uPass_attributes: const `r` rebind (assigned 2 times)".
// (No line marker: this upass diagnostic currently carries no source span.)
//
// NOTE: the narrower doc case — a `const` field inside a `mut` tuple
// (`mut f = (mut b=3, const e=5); f.e = 10`) — is NOT yet caught; only a
// fully-`const` base is rejected today.

const r = (const a = 1)
r.a = 33
